Help with Images

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 
 <section>
     <h2>Transformational Leadership and Development</h2>
+    <img src="/assets/images/PortfolioBackground.jpg" alt="Blue and Green Painting">
 </section>
 
 <aside>
