Second session and pretutoring

--- a/index.html
+++ b/index.html
@@ -22,18 +22,19 @@
         </nav>
 </header>
 
-<section>
+<section class="text-block">
     <h2>Transformational Leadership and Development</h2>
-    <img src="/assets/images/PortfolioBackground.jpg" alt="Blue and Green Painting">
+    <img src="./assets/images/PortfolioBackground.jpg" alt="Blue and Green Painting">
 </section>
 
 <aside>
-    <p>About Me</p>
-    <p>Work</p>
-    <p>Contact Me</p>
+    <p1>About Me</p1>
+    <p2>Work</p2>
+    <p3>Contact Me</p3>
 </aside>
 
-<main>
+<main class="box">
+
     <p>All about me</p>
     
     <div>
