--- a/index.html
+++ b/index.html
@@ -2,84 +2,102 @@
 <html lang="en">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Developer Portfolio</title>
-  <link rel="stylesheet" href="assets/css/reset.css" />
-  <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Developer Portfolio</title>
+    <link rel="stylesheet" href="assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
     <header>
-        <h1>Amanda Paul</h1>
-        <nav>
-            <ul>
-                <li><a href="#">About Me</a></li>
-                <li><a href="#">Work</a></li>
-                <li><a href="#">Contact Me</a></li>
-                <li><a href="#">Resume</a></li>
-            </ul>
-        </nav>
-</header>
+        <div class="name-and-photo">
+            <h1>Amanda Paul</h1>
+            <img src="./assets/images/Amanda Portfolio Photo.jpg" alt="Photo of Amanda Paul">
+        </div>
+    </header>
 
-<section class="text-block">
-    <h2>Transformational Leadership and Development</h2>
-    <img src="./assets/images/PortfolioBackground.jpg" alt="Blue and Green Painting">
-</section>
-
-<aside>
-    <p1>About Me</p1>
-    <p2>Work</p2>
-    <p3>Contact Me</p3>
-</aside>
-
-<main class="box">
-
-    <p>All about me</p>
-    
-    <div>
-        <b>Surf Report</b>
-        <small>MERN Stack</small>
-        <img src="#" alt="Image Description">
-    </div>
-
-    <div>
-        <b>LED Wall</b>
-        <small>Node/loT</small>
-        <img src="#" alt="Image Description">
-    </div>
-
-    <div>
-        <b>Calculator</b>
-        <small>React/JavaScript/CSS</small>
-        <img src="#" alt="Image Description">
-    </div>
-
-    <div>
-        <b>Pastel Puzzles</b>
-        <small>MERN Stack</small>
-        <img src="#" alt="Image Description">
-    </div>
-
-    <div>
-        <b>Run Buddy</b>
-        <small>HTML/CSS</small>
-        <img src="#" alt="Image Description">
-    </div>
-
-</main>
-
-<foot>
     <nav>
         <ul>
-            <li><a href="#">757-775-7530</a></li>
-            <li><a href="#">amandapaul1223@gmail.com</a></li>
-            <li><a href="#">GitHub</a></li>
-            <li><a href="#">Twitter</a></li>
-            <li><a href="#">Spotify</a></li>
+            <li><a href="#">About Me</a></li>
+            <li><a href="#">Work</a></li>
+            <li><a href="#">Contact Me</a></li>
+            <li><a href="#">Resume</a></li>
         </ul>
     </nav>
-</foot>
+
+    <main>
+
+        <section class="section">
+            <section class="left">
+            <h2>About Me</h2>
+            </section>
+
+            <section class="right">
+                <p>A Web Developer specializing in Transformational Development and Leadership. As a seconday public school teacher, I have made a name for myself through creating, developing, and instituting evolutionary processes for instruction. The first project I initiated as a teacher collected and analyzed the data of the student population in my school in order to determine what intervention methods would be most beneficial to struggling students. This program, in it's first year, reduced failing grades in our school by 98%. I have since focused on using Digital Transformation to revolutionize the learning process where students take the lead in their education. They participate in student-lead learning experiences where they self-assess, self-grade, and reflect on their growth. My tools and process are being taught and distributed across the district. This experience as an educator has given me powerful opportunities to identify problems, troubleshoot solutions and experiement with their effectiveness, and engage other professionals through facilitating empowering trainings and boostering events to recruit educator involvement. 
+            </section>
+        </section>
+
+        <section class="section">
+
+            <section class="left">
+                <h2>Work</h2>
+            </section>
+
+            <section class="projects right">
+
+                <section class="project">
+                    <b>Surf Report</b>
+                    <small>MERN Stack</small>
+                    <img src="#" alt="Image Description">
+                </section>
+
+                <section class="project">
+                    <b>LED Wall</b>
+                    <small>Node/loT</small>
+                    <img src="#" alt="Image Description">
+                </section>
+
+                <section class="project">
+                    <b>Calculator</b>
+                    <small>React/JavaScript/CSS</small>
+                    <img src="#" alt="Image Description">
+                </section>
+
+                <section class="project">
+                    <b>Pastel Puzzles</b>
+                    <small>MERN Stack</small>
+                    <img src="#" alt="Image Description">
+                </section>
+
+                <section class="project">
+                    <b>Run Buddy</b>
+                    <small>HTML/CSS</small>
+                    <img src="#" alt="Image Description">
+                </section>
+
+            </section>
+
+        </section>
+
+        <section class="section">
+
+            <section class="left">
+                <h2>Contact Me</h2>
+            </section>
+
+            <ul class="right">
+                <li><a href="#">757-775-7530</a></li>
+                <li><a href="#">amandapaul1223@gmail.com</a></li>
+                <li><a href="#">GitHub</a></li>
+                <li><a href="#">Twitter</a></li>
+                <li><a href="#">Spotify</a></li>
+            </ul>
+
+        </section>
+
+    </main>
 
 </body>
+
 </html>
