--- a/index.html
+++ b/index.html
@@ -19,26 +19,25 @@
 
     <nav>
         <ul>
-            <li><a href="#">About Me</a></li>
-            <li><a href="#">Work</a></li>
-            <li><a href="#">Contact Me</a></li>
-            <li><a href="#">Resume</a></li>
+            <li><a href="#about-me">About Me</a></li>
+            <li><a href="#work">Work</a></li>
+            <li><a href="#contact-me">Contact Me</a></li>
         </ul>
     </nav>
 
     <main>
 
         <section class="section">
-            <section class="left">
+            <section id="about-me" class="left">
             <h2>About Me</h2>
             </section>
 
             <section class="right">
-                <p>A Web Developer specializing in Transformational Development and Leadership. As a seconday public school teacher, I have made a name for myself through creating, developing, and instituting evolutionary processes for instruction. The first project I initiated as a teacher collected and analyzed the data of the student population in my school in order to determine what intervention methods would be most beneficial to struggling students. This program, in it's first year, reduced failing grades in our school by 98%. I have since focused on using Digital Transformation to revolutionize the learning process where students take the lead in their education. They participate in student-lead learning experiences where they self-assess, self-grade, and reflect on their growth. My tools and process are being taught and distributed across the district. This experience as an educator has given me powerful opportunities to identify problems, troubleshoot solutions and experiement with their effectiveness, and engage other professionals through facilitating empowering trainings and boostering events to recruit educator involvement. 
+                <p>A Web Developer specializing in Transformational Development and Leadership. As a secondary public school teacher, I have made a name for myself through creating, developing, and instituting evolutionary processes for instruction. The first project I initiated as a teacher collected and analyzed the data of the student population in my school in order to determine what intervention methods would be most beneficial to struggling students. This program, in it's first year, reduced failing grades in our school by 98%. I have since focused on using Digital Transformation to revolutionize the learning process where students take the lead in their education. They participate in student-lead learning experiences where they self-assess, self-grade, and reflect on their growth. My tools and process are being taught and distributed across the district. This experience as an educator has given me powerful opportunities to identify problems, troubleshoot solutions and experiement with their effectiveness, and engage other professionals through facilitating empowering trainings and boostering events to recruit educator involvement. 
             </section>
         </section>
 
-        <section class="section">
+        <section id="work" class="section">
 
             <section class="left">
                 <h2>Work</h2>
@@ -46,34 +45,9 @@
 
             <section class="projects right">
 
-                <section class="project">
-                    <b>Surf Report</b>
-                    <small>MERN Stack</small>
-                    <img src="#" alt="Image Description">
-                </section>
-
-                <section class="project">
-                    <b>LED Wall</b>
-                    <small>Node/loT</small>
-                    <img src="#" alt="Image Description">
-                </section>
-
-                <section class="project">
-                    <b>Calculator</b>
-                    <small>React/JavaScript/CSS</small>
-                    <img src="#" alt="Image Description">
-                </section>
-
-                <section class="project">
-                    <b>Pastel Puzzles</b>
-                    <small>MERN Stack</small>
-                    <img src="#" alt="Image Description">
-                </section>
-
-                <section class="project">
-                    <b>Run Buddy</b>
-                    <small>HTML/CSS</small>
-                    <img src="#" alt="Image Description">
+                <section id="image-fade" class="project">
+                    <h3>Site Refactor</h3>
+                    <a href="https://amandapaul1223.github.io/site-refactor/"><img src="./assets/images/Page 1.png" alt="Preview of Site Refactor"/></a>
                 </section>
 
             </section>
@@ -82,17 +56,17 @@
 
         <section class="section">
 
-            <section class="left">
+            <section id="contact-me" class="left">
                 <h2>Contact Me</h2>
             </section>
 
-            <ul class="right">
+            <section class="projects right contacts">
                 <li><a href="#">757-775-7530</a></li>
                 <li><a href="#">amandapaul1223@gmail.com</a></li>
                 <li><a href="#">GitHub</a></li>
                 <li><a href="#">Twitter</a></li>
                 <li><a href="#">Spotify</a></li>
-            </ul>
+            </section>
 
         </section>
 
