Final to-do fix text box flex

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
             </section>
 
             <section class="projects right contacts">
-                <li><h4>757-775-7530</h4></li>
-                <li><h4>amandapaul1223@gmail.com</h4></li>
+                <li><a href="#"><h4>757-775-7530</h4></li>
+                <li><a href="#"><h4>amandapaul1223@gmail.com</h4></li>
                 <li><a href="https://github.com/amandapaul1223"><h4>GitHub</h4></li>
                 <li><a href="https://twitter.com/5littlepandas"><h4>Twitter</h4></li>
             </section>
