--- a/index.html
+++ b/index.html
@@ -44,10 +44,8 @@
             </section>
 
             <section class="projects right">
-
                 <section class="main-project">
-                    <h3 class="text-block1">Site Refactor</h3>
-                    <a href="https://amandapaul1223.github.io/site-refactor/"><img src="./assets/images/Page 1.png" alt="Preview of Site Refactor"/></a>
+                    <a href="https://amandapaul1223.github.io/site-refactor/"><img src="./assets/images/site-refactor-link-image.png" alt="Preview of Site Refactor"/></a>
                 </section>
 
                 <section class="sub-projects">
